work on chapter 5, SDLC-AE

--- a/paper_10_intro.tex
+++ b/paper_10_intro.tex
@@ -524,6 +524,14 @@
     another team.  The people creating the tools need to be acutely aware
     of the needs of the technical practitioners that will be using the
     tools.  
+    
+    Iqbal, Ureche, Hausenblas, and Tummarello introduced a methodology named
+    Linked Data Driven Software Development (LD2SD) which is a collection
+    of various software artifacts into linked data \cite{Iqbal2009}.  This
+    is one of the original attempts to collect software engineering data.
+    The methodology links version control, discussion forums, and issue tracking
+    data. The result is web-scale integration of data, but the actual
+    benefits are still uncertain. 
 
     After the proper tools are in place to collect the necessary
     data on software development and software analytics are being
