--- a/paper_20_sdo.tex
+++ b/paper_20_sdo.tex
@@ -176,6 +176,7 @@ This is the definition used for the remainder of this work.
         tasks necessary to complete the software life cycle.
         
 \subsection{WHAT IS SOFTWARE ENGINEERING?}
+\label{sec:swe}
     \textit{Software Engineering} as a term dates back to the 
     1968 North Atlantic Treaty Organization (NATO) conference \cite{Tsui2013, Naur1969}. Over the 
     years many definitions have been provided.  IEEE provides a definition that encompasses many of the
