--- a/references.bib
+++ b/references.bib
@@ -226,6 +226,13 @@
     address = {Los Alamitos, CA, USA},
     keywords = {budget and schedule, control, metrics, project management, software engineering, software engineering, metrics, control, project management, budget and schedule},
 }
+@online{DDP2015,
+    title = {Data-driven programming},
+    year = {2015},
+    month = {3},
+    url = {http://en.wikipedia.org/wiki/Data-driven_programming},
+    organization = {Wikipedia}
+}
 @book{Downey2011,
 	title = {Think Stats: Probability and Statistics for Programmers},
 	year = {2011},
@@ -447,6 +454,12 @@
     pages={1-84},
     keywords={glossaries;software engineering;standards;IEEE Std 610.12-1990;software engineering terminology;standard glossary;Software engineering;Standards;Terminology;Definitions;Software engineering;dictionary;glossary;terminology},
     doi={10.1109/IEEESTD.1990.101064}
+}
+@INPROCEEDINGS{Iqbal2009,
+    author = {Aftab Iqbal and Oana Ureche and Michael Hausenblas and Giovanni Tummarello},
+    title = {LD2SD: Linked Data Driven Software Development},
+    booktitle = {In 21st International Conference on Software Engineering and Knowledge Engineering (SEKE 09},
+    year = {2009}
 }
 @article{Jain2013,
 	author = 	{Anuj Jain and Sarika Angadi},
