--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -282,8 +282,7 @@
                     \item $f_i$ is the function to predict PROD defects for Application $i$ based upon 
                         \textit{UAT Defects}, \textit{SIT Defects}, \textit{Testing Effort}, 
                         and \textit{Development Effort}
-                    \item $6\sigma$ 6 times an estimate of the standard deviation of the 
-                        population using function $f_i$ above
+                    \item $\sigma^2$ is the estimated variance
                 \end{itemize}
                 
                 Then the overall quality score is calculated as below.
