--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -19,10 +19,15 @@
     \subsection{WITH HISTORICAL DATA}
         After the data has been collected, the raw data can be stored in the SDLC
         if desired.  Then scores for each of the 4 elements can be calculated.
+        For this example, the value of $k$ will be 100 and the time
+        frequency will be monthly.  Thus, scores will fall
+        in the range $[-100,100]$.
         \subsubsection{QUALITY}
             The first step to dealing with the quality data is a quick
             analysis of the data.  Table \ref{tab:quality_desc} provides
-            some descriptive statistics for the quality data.
+            some descriptive statistics for the quality data.  Testing hours
+            were not capture but they are optional, so the analysis can 
+            continue.
             
             
             \begin{longtable}{@{}l rr rrr}
@@ -55,7 +60,6 @@
                 
                 \multicolumn{6}{c}{985 obs. from 23 Application IDs from 2007 to 2015} \\
                 
-                
                 \caption{QUALITY DATA DESCRIPTIVE STATISTICS}
                 \label{tab:quality_desc}
             \end{longtable}
@@ -63,11 +67,43 @@
             Notice, the data for quality goes from October 2007 to January 2015
             and contains 985 observations.
             This is important because historical data can be used to create the
-            baseline quality function.  All quality for the years 2007 through 2013
+            baseline quality function.  All quality for the years 2007 through 
+            the end of 2013
             will be used as historical data for the purposes of creating
             the baseline quality function.  Once the historical data is separated,
             it results in 799 observations to be used for creating the baseline
-            quality function.  
+            quality function.  Figure \ref{fig:quality-plots1} shows scatterplots
+            of PROD\_DFTS versus the independent variables of DEV\_EFF, SIT\_DFTS,
+            and UAT\_DFTS.  It can be seen that some correlations exist between
+            the variables.
+            
+            \begin{figure}[ht]
+                \centering
+                \includegraphics[scale=.3]{images/quality_plots1.png}
+                \caption{QUALITY DATA PLOTS: DEPENDENT VS. INDEPENDENT VARIABLES}
+                \label{fig:quality-plots1}
+            \end{figure}
+            
+            Figure \ref{fig:quality-plots1} also shows the presence of a possible outlier
+            with 1216 PROD\_DFTS.  That data point is dropped for the remaining analysis.
+            At this point, a simple linear regression model can be fit to the remaining
+            798 observations. At this point, no transformations have been performed
+            on the data.  The linear regression model yields all 3 independent
+            variables as significant and an overall $R^2 = .72$.  The source
+            code and some further analysis can be found in Appendix 
+            \ref{app:quality-history}. It appears to 
+            be a good fit and thus all Application IDs will have the same baseline
+            quality function.  Therefore, $f$ does not need a subscript, and $f$
+            can be seen below.
+            
+            \[
+                f = 5.92+ 0.035 \cdot DEV\_EFF - 0.36 \cdot SIT\_DFTS + 1.05 \cdot UAT\_DFTS
+            \]
+            
+            Now that $f$ has been determined, the quality scores for each
+            application can be calculated for all the months beyond 2013.
+            
+            
             
             
             
