finishing quality for case study

--- a/appendices.tex
+++ b/appendices.tex
@@ -91,9 +91,9 @@ APPENDIX\\
 \label{app:case}
 
 
-    \subsection{QUALITY HISTORICAL SOURCE CODE AND ANALYSIS}
+    \subsection{QUALITY HISTORICAL R CODE AND ANALYSIS}
     \label{app:quality-history}
-        \lstinputlisting[language=R]{source/quality.R}
+        \lstinputlisting[language=R]{source/quality_historical.R}
         The source code for the selected baseline quality function
         can be seen above. The output for the linear model can be seen below.
         \lstinputlisting{source/quality_output.txt}
@@ -122,6 +122,9 @@ APPENDIX\\
             \caption{QUALITY PAIRS PLOT OF INDEPENDENT VARIABLES}
             \label{fig:quality-pairs}
         \end{figure}
+        
+    \subsection{QUALITY SCORES - R CODE}
+        \lstinputlisting[language=R, label=src:quality]{source/quality.R}
         
         
     
