--- a/paper_70_case-study.tex
+++ b/paper_70_case-study.tex
@@ -102,8 +102,18 @@
             
             Now that $f$ has been determined, the quality scores for each
             application can be calculated for all the months beyond 2013.
+            Appendix \ref{src:quality} provides the necessary R code to
+            perform the calculations.  Figure \ref{fig:quality-scores} shows
+            the quality scores for 2014 and beyond.  As can be seen, the
+            scores are greatly above expectations.  That is an indication
+            of good quality.
             
-            
+            \begin{figure}[ht]
+                \centering
+                \includegraphics[scale=.3]{images/quality_scores.png}
+                \caption{CRI QUALITY SCORES}
+                \label{fig:quality-scores}
+            \end{figure}
             
             
             
