--- a/paper_40_cri.tex
+++ b/paper_40_cri.tex
@@ -856,6 +856,10 @@
         For more on sensitivity analysis in statistical modeling, see \cite{Saltelli2000}.
 
     \subsection{CRI COMPARED}
+        CRI is one way to evaluate an SDO, and it is also a technique of
+        software analytics.  Therefore, it is beneficial to compare CRI
+        with some of the other techniques and guidelines available. The
+        next sections will provide those comparisons.
     
         \subsubsection{CRI VS. FOCUS AREAS OF SOFTWARE ANALYTICS}
     
