--- a/references.bib
+++ b/references.bib
@@ -848,8 +848,7 @@
 @article{Saltelli2000,
     author = {A. Saltelli and S. Tarantola and F. Campolongo},
     title = {Sensitivity Analysis as an Ingredient of Modeling},
-    journal = {Statistical Software},
-    issue_date = {September 2013},
+    journal = {Statistical Science},
     volume = {15},
     number = {4},
     year = {2000},
